# msim

./: ChangeLog  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
contrib/: msim.spec
doc/: reference.html
src/: Makefile  Makefile.depend.prev  Makefile.in  text.c  utils.c  utils.h
src/arch/win32/: stdin.c
src/cpu/: cpu.c
src/debug/: debug.c  gdb.c
src/device/: ddisk.c
